fix: customTransitions bugs

--- a/CustomTransition/CustomTransition-OC/CustomTransitions/Adaptive Presentation/AdaptivePresentation.storyboard
+++ b/CustomTransition/CustomTransition-OC/CustomTransitions/Adaptive Presentation/AdaptivePresentation.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="sLR-bb-3Vh">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sLR-bb-3Vh">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -10,7 +12,7 @@
             <objects>
                 <navigationController id="sLR-bb-3Vh" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PJe-0n-zSB">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -30,26 +32,26 @@
                         <viewControllerLayoutGuide type="bottom" id="25U-MB-ZTX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hab-Vv-wx4">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0q-wq-uBL">
-                                <rect key="frame" x="262" y="228" width="76" height="144"/>
+                                <rect key="frame" x="157" y="350" width="76" height="144"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="120"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDw-I8-B5a">
-                                <rect key="frame" x="179" y="550" width="243" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDw-I8-B5a">
+                                <rect key="frame" x="73.666666666666686" y="760" width="243" height="30"/>
                                 <state key="normal" title="Present With Adaptive Presentation">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Ddd-0G-t9T" kind="custom" customClass="AAPLAdaptivePresentationSegue" id="glq-Sr-Od4"/>
+                                    <segue destination="Ddd-0G-t9T" kind="custom" customClass="AAPLAdaptivePresentationSegue" id="Ja5-rE-bMX"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.90146998359999997" green="0.90003083880000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.90146998359999997" green="0.90003083880000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="a0q-wq-uBL" secondAttribute="centerX" id="Mb1-IC-seL"/>
                             <constraint firstAttribute="centerX" secondItem="sDw-I8-B5a" secondAttribute="centerX" id="d38-UM-DvB"/>
@@ -79,22 +81,23 @@
                         <viewControllerLayoutGuide type="bottom" id="leU-E9-UKW"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jlJ-ke-oNs">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HZ1-Q6-rte">
-                                <rect key="frame" x="263" y="228" width="74" height="144"/>
+                                <rect key="frame" x="158.66666666666666" y="350" width="72.666666666666657" height="144"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="120"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="HZ1-Q6-rte" secondAttribute="centerX" id="0mL-Bl-bxZ"/>
                             <constraint firstAttribute="centerY" secondItem="HZ1-Q6-rte" secondAttribute="centerY" id="H2E-O5-o7j"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="NzC-71-0Y7"/>
                     <connections>
                         <segue destination="fAJ-8z-SI3" kind="unwind" identifier="unwindToFirstViewController" unwindAction="unwindToAdaptivePresentationFirstViewController:" id="M9y-ma-xyJ"/>
                     </connections>
